gitops/apps/aligner-sandbox/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: aligner-sandbox
  labels:
    app.kubernetes.io/part-of: aligner
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/enforce-version: latest
